# country_names

./: .gitignore  README.md  main.py  main_films.py  main_hockey.py  main_jobs.py  pyproject.toml
data/: results.csv
utils/: util.py
