[tool.poetry]
name = "country-names"
version = "0.1.0"
description = "scrape scrapethissite,com\u001b[D\u001b[D\u001b[.\u001b[D\u001b[D\u001b[3~\u001b[3~\u001b[3~"
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.1.4"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
